--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -1,10 +1,28 @@
-.shop-container{
+.shop-container {
     display: grid;
     grid-template-columns: 4fr 1fr;
 }
-.products-container{
+
+.products-container {
     margin: 50px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
+}
+
+.proceed-link {
+    text-decoration: none;
+}
+
+.btn-proceed {
+    width: 90%;
+    height: 56px;
+    font-size: 21px;
+    margin: 10px auto;
+    background: #f0dd10;
+    border-radius: 4px;
+    color: rgb(8, 8, 8);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
